# PEARL

./: .gitignore  README.md  pearl_colab_v2.ipynb  pearl_paper_v16.tex  pearl_paper_v18.tex  pearl_paper_v5.tex  pyproject.toml  requirements.txt
configs/: paper_er150.yaml  paper_er150_alpha01.yaml  paper_er200_alpha015_p012.yaml  paper_ring150.yaml  paper_ring150_alpha01.yaml  paper_sf150.yaml  paper_sf150_alpha01.yaml  smoke.yaml
configs/cifar10/: pearl_er150.yaml  pearl_ring150.yaml  pearl_sf150.yaml  server_references150.yaml
configs/cifar10/decentralized_references/: dpsgd_full_er150.yaml  dpsgd_full_ring150.yaml  dpsgd_full_sf150.yaml
configs/cifar10/dynamic/: dropout_er_a04.yaml  dropout_er_a06.yaml  dropout_er_a08.yaml  staleness_er_r05.yaml  staleness_er_r10.yaml  staleness_er_r20.yaml
scripts/: plot.py  run.py  run_cifar10_suite.py  run_cluster.py  smoke_all_methods.py  summarize.py
src/pearl/: __init__.py  config.py  constants.py  data.py  descriptors.py  exchange.py  experiment.py  graphs.py  metrics.py  models.py  results.py  selection.py  training.py  utils.py  visualization.py
src/pearl/cli/: __init__.py  _run_worker.py  cluster_run.py  plot.py  run.py  summarize.py
tests/: test_cifar_and_baselines.py  test_cluster_run.py  test_config.py  test_results.py  test_run_resume.py
