[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pearl-fl"
version = "0.1.0"
description = "Budgeted peer selection for decentralized federated representation learning experiments."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.7",
    "networkx>=3.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "PyYAML>=6.0",
    "scikit-learn>=1.3",
    "torch>=2.0",
    "torchvision>=0.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
pearl-run = "pearl.cli.run:main"
pearl-plot = "pearl.cli.plot:main"
pearl-summarize = "pearl.cli.summarize:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
